--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
@@ -74,6 +74,11 @@
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.empleados.Area.descripcion)</dd>
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.empleados.puesto)</dt>
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.empleados.puesto1.descripcion)</dd>
+                                        @foreach (var linea in Model.empleados.GetIT_Inventory_Cellular_LinesActivas())
+                                        {
+                                            <dt class="col-sm-2">@Html.DisplayNameFor(model => linea.numero_celular)</dt>
+                                            <dd class="col-sm-2">@Html.DisplayFor(model => linea.GetPhoneNumberFormat)</dd>
+                                        }
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.empleados.activo)</dt>
                                         <dd class="col-sm-2">
                                             @if (Model.empleados.activo.HasValue && Model.empleados.activo.Value)
@@ -120,25 +125,47 @@
                             <div class="col-md-6 col-sm-6 ">
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
                             </div>
-                          
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.id_empleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados.ConcatNombre)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
 
-                            @Html.LabelFor(model => model.id_it_inventory_item, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.IT_inventory_items.ConcatInfoGeneral)" readonly />
-                            </div>
-                            <div class="col-md-1 col-sm-1">
-                                <button type="button" id="btn-info-cell" class="btn btn-primary btn-sm" style="@(Model.id_it_inventory_item>0?"display:block":"display:none")" title="Ver Detalles"> <i class="fa-solid fa-eye"></i></button>
-                            </div>
                         </div>
 
+
+                        @if (Model.id_cellular_line.HasValue)
+                        {
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.id_cellular_line, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.IT_inventory_cellular_line.ConcatDetalles)" readonly />
+                                </div>
+                            </div>
+                        }
+
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>LISTADO HARDWARE</b></span>
+                        </div>
+
+                        @foreach (var item in Model.IT_asignacion_hardware_rel_items)
+                        {
+                            var generic = item.GetGenericObject();                           
+
+                            <div class="item form-group">
+                                <label class="col-form-label col-md-1 col-sm-1 label-align">Origen</label>
+                                <div class="col-md-1 col-sm-1 ">
+                                    <input type="text" class="form-control" value="@(item.EsInventario()?"Inventario":"Genérico")" readonly />
+                                </div>
+                                <label class="col-form-label col-md-1 col-sm-1 label-align">Tipo</label>
+                                <div class="col-md-2 col-sm-2 ">
+                                    <input type="text" class="form-control" value="@generic.IT_inventory_hardware_type.descripcion" readonly />
+                                </div>
+                                <label class="col-form-label col-md-1 col-sm-1 label-align">Hardware</label>
+                                <div class="col-md-4 col-sm-4 ">
+                                    <input type="text" class="form-control" value="@generic.ConcatInfoGeneral" readonly />
+                                </div>
+                                <div class="col-md-1 col-sm-1">
+                                    <button type="button" onclick="MuestraDetalles(@Convert.ToInt32(item.EsInventario()), @generic.id)" class="btn btn-primary btn-sm" style="@(generic.id>0?"display:block":"display:none")" title="Ver Detalles"> <i class="fa-solid fa-eye"></i></button>
+                                </div>
+                            </div>
+                        }
                         <div class="ln_solid"></div>
                         <div class="form-group row">
                             <span style="color:black"><b>RESPONSIVA</b></span>
@@ -196,18 +223,22 @@
 
 
 @section Scripts {
-   
-    <script>
-        $(document).ready(function () {                               
 
-            //muestra el modal con la info
-            $("#btn-info-cell").click(function () {
-                window.open('/IT_Inventory_items/Details/' + @Model.id_it_inventory_item+'', 'popup', "width=" + screen.width * .80 + ",height=" + screen.height * .80 + "");
-            });
+    <script>
+        $(document).ready(function () {
+
+           
         });
 
+        function MuestraDetalles(inventario, id) {
+            if (inventario) {
+                window.open('/IT_Inventory_items/Details/' + id + '', 'popup', "width=" + screen.width * .80 + ",height=" + screen.height * .80 + "");
+            } else { //es generico
+                window.open('/IT_Inventory_items_genericos/Details/' + id + '', 'popup', "width=" + screen.width * .80 + ",height=" + screen.height * .80 + "");
+            }
+        }
         //variable para saber si ha cambiado el formulario y asi no se detenga por doble submit
-      
+
         window.onload = function () {
             clicMenu(1);
         }
