--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Enable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Enable.cshtml
@@ -36,13 +36,13 @@
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.IT_inventory_cellular_plans.nombre_plan)" readonly />
                             </div>
                         </div>
-                        <div class="item form-group">
+                        @*<div class="item form-group">
                             <label class="col-form-label col-md-3 col-sm-3 label-align">Asignado</label>
                             <div class="col-md-6 col-sm-6">
                                 <input type="text" class="form-control" value="@(Model.IT_asignacion_cellular_line.Count>0 ?
                                                         Model.IT_asignacion_cellular_line.First().empleados.ConcatNumEmpleadoNombre : "NO ASIGNADO" )" readonly>
                             </div>
-                        </div>
+                        </div>*@
                         <div class="item form-group">
                             @Html.LabelFor(model => model.numero_celular, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                             <div class="col-md-6 col-sm-6 ">
