--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -178,6 +178,7 @@
                                                         </ul>
                                                     </li>
                                                     <li class="@(ViewBag.SegundoNivel == "IT_inventory_tipos_accesorios" ? "current-page" : null )"><a href="@Url.Action("index", "IT_inventory_tipos_accesorios")">Tipos de Accesorios</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "IT_Inventory_items_genericos" ? "current-page" : null )"><a href="@Url.Action("index", "IT_Inventory_items_genericos")">Hardware Gen&eacute;rico</a></li>
 
                                                 }
 
